customize some text

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <section>
         <div class="w-1/2 mx-auto mt-12 bg-indigo-300 p-8 rounded">
             <input class="display: block w-3/4 my-4 px-2 py-2 rounded" type="email" name="" id="input-mail"
-                placeholder="Enter your mail">
+                placeholder="Enter your email">
             <input class="display: block px-2 w-3/4 py-2 rounded" type="password" name="" id="input-password"
                 placeholder="Enter your password">
             <button id="submit-button"
                 class="my-4 bg-yellow-300 text-white font-semibold text-lg py-2 px-4 rounded">Submit</button>
+            <p>Email: forhad@gmail.com</p>
+            <p>Password: forhad</p>
         </div>
     </section>
 
